--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- About -->
         <main id="main" class="grid-item">
             <div class="energy">
-                <div class="photo"><img src="http://uskupniow.pl/pokoje/domn.jpg" alt="ENERGIA-WIATROWA"></div>
+                <div class="photo"><img src="img/3d.jpg" alt="ENERGIA-WIATROWA"></div>
                 <div class="desc">
                 <span>Lorem</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa vero vel.</p>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="energy right dark">
-                <div class="photo"><img src="http://uskupniow.pl/pokoje/jadalniad.jpg" alt="BIOGAZOWNIE"></div>
+                <div class="photo"><img src="img/domn.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
                 <span>Ipsum</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="energy">
-                <div class="photo"><img src="http://uskupniow.pl/pokoje/3d.jpg" alt="OSWIETLENIA-SOLARNE"></div>
+                <div class="photo"><img src="img/jadalniad.jpg" alt="OSWIETLENIA-SOLARNE"></div>
                 <div class="desc">
                 <span>Lorem</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore blanditiis natus amet, totam aperiam similique deserunt at maiores perspiciatis, possimus dolorum vero qui deleniti praesentium sunt cupiditate a. Sapiente cupiditate illum, minima modi facilis, ea maxime labore nostrum quidem eaque mollitia dolorum repellat magnam molestiae exercitationem corrupti libero, non eveniet?</p>
@@ -86,22 +86,22 @@
                 <div class="myborder"></div>
                 <div class="row">
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/pokoje/pokoj1d.jpg" alt="FRONT-PAGE-PHOTO-1">
+                        <img src="img/5.jpg" alt="FRONT-PAGE-PHOTO-1">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/pokoje/pokoj2d.jpg" alt="FRONT-PAGE-PHOTO-2">
+                        <img src="img/bilardd.jpg" alt="FRONT-PAGE-PHOTO-2">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/pokoje/pokoj1d.jpg" alt="FRONT-PAGE-PHOTO-3">
+                        <img src="img/tenisd.jpg" alt="FRONT-PAGE-PHOTO-3">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/pokoje/bilardd.jpg" alt="FRONT-PAGE-PHOTO-4">
+                        <img src="img/pokoj2d.jpg" alt="FRONT-PAGE-PHOTO-4">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/pokoje/tenisd.jpg" alt="FRONT-PAGE-PHOTO-5">
+                        <img src="img/pokoj1d.jpg" alt="FRONT-PAGE-PHOTO-5">
                     </div>
                     <div class="col-sm-6 col-md-4 gallery">
-                        <img src="http://uskupniow.pl/galeria/5.jpg" alt="FRONT-PAGE-PHOTO-6">
+                        <img src="img/pokoj2d.jpg" alt="FRONT-PAGE-PHOTO-6">
                     </div>
                 </div>
             </div>
