--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- About -->
 
         <!-- Gallery -->
-        <section id="gallery" class="grid-item gallery">
+        <section id="gallery" class="grid-item gallery dark">
             <div class="container-fluid">
                 <h2>GALERIA</h2>
                 <div class="myborder"></div>
@@ -109,7 +109,7 @@
         <!-- Gallery -->
 
         <!-- Contact -->
-        <section id="contact" class="contact grid-item dark">
+        <section id="contact" class="contact grid-item">
 
             <span>KONTAKT</span>
             <div class="myborder"></div>
