--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- About -->
         <main id="main" class="grid-item">
-            <div class="energy">
+            <div class="energy dark">
                 <div class="photo"><img src="img/3d.jpg" alt="ENERGIA-WIATROWA"></div>
                 <div class="desc">
                 <span>Lorem</span>
@@ -60,7 +60,7 @@
                 <a href="#">Więcej</a>
                 </div>
             </div>
-            <div class="energy right dark">
+            <div class="energy right">
                 <div class="photo"><img src="img/domn.jpg" alt="BIOGAZOWNIE"></div>
                 <div class="desc">
                 <span>Ipsum</span>
@@ -68,7 +68,7 @@
                 <a href="#">Więcej</a>
                 </div>
             </div>
-            <div class="energy">
+            <div class="energy dark">
                 <div class="photo"><img src="img/jadalniad.jpg" alt="OSWIETLENIA-SOLARNE"></div>
                 <div class="desc">
                 <span>Lorem</span>
@@ -80,7 +80,7 @@
         <!-- About -->
 
         <!-- Gallery -->
-        <section id="gallery" class="grid-item gallery dark">
+        <section id="gallery" class="grid-item gallery">
             <div class="container-fluid">
                 <h2>GALERIA</h2>
                 <div class="myborder"></div>
@@ -109,7 +109,7 @@
         <!-- Gallery -->
 
         <!-- Contact -->
-        <section id="contact" class="contact grid-item">
+        <section id="contact" class="contact grid-item dark">
 
             <span>KONTAKT</span>
             <div class="myborder"></div>
