--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SolarEnergia - Odnawialne źródła energii, Elektrownie Wiatrowe, Biogazownie.">
+    <meta name="description" content="Pokoje gościnne u Beatki i Staszka">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Szymon Gutt">
-    <title>SolarEnergia - Odnawialne źródła energii - Home</title>
+    <title>Pokoje gościnne u Beatki i Staszka</title>
     <!-- Styles -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel='stylesheet' id='google-fonts-css'  href='https://fonts.googleapis.com/css2?family=Roboto+Slab&#038;display=swap&#038;ver=5.5.1' type='text/css' media='all' />
@@ -20,7 +20,7 @@
     <body>
         <!-- Menu -->
         <nav id="menu" class="grid-item">
-            <a href="" class="logo">SolarEnergia</a>
+            <a href="" class="logo">uSkupniów</a>
             <button class="menu-toggler">
                 <span></span>
                 <span></span>
@@ -53,7 +53,7 @@
         <!-- About -->
         <main id="main" class="grid-item">
             <div class="energy dark">
-                <div class="photo"><img src="img/3d.jpg" alt="ENERGIA-WIATROWA"></div>
+                <div class="photo"><img src="img/3d.jpg" alt="lorem"></div>
                 <div class="desc">
                 <span>Lorem</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ipsa vero vel.</p>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="energy right">
-                <div class="photo"><img src="img/domn.jpg" alt="BIOGAZOWNIE"></div>
+                <div class="photo"><img src="img/domn.jpg" alt="lorem"></div>
                 <div class="desc">
                 <span>Ipsum</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quis porro ad eius maiores excepturi adipisci minima atque. Rerum perferendis iure harum ducimus dignissimos ipsam aliquid natus nostrum laboriosam sint, itaque ipsa iste, eos sunt eum dolore recusandae.</p>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="energy dark">
-                <div class="photo"><img src="img/jadalniad.jpg" alt="OSWIETLENIA-SOLARNE"></div>
+                <div class="photo"><img src="img/jadalniad.jpg" alt="lorem"></div>
                 <div class="desc">
                 <span>Lorem</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore blanditiis natus amet, totam aperiam similique deserunt at maiores perspiciatis, possimus dolorum vero qui deleniti praesentium sunt cupiditate a. Sapiente cupiditate illum, minima modi facilis, ea maxime labore nostrum quidem eaque mollitia dolorum repellat magnam molestiae exercitationem corrupti libero, non eveniet?</p>
